# numpy-mkl

./: .editorconfig  .gitignore  README.md  build.json  ci-targets.yaml  flake.nix  index.html  pyproject.toml
.github/: dependabot.yml
benchmarks/: run_benchmarks
intel-cmplr-lib-ur/: index.html
intel-openmp/: index.html
mkl/: index.html
mkl-service/: index.html  mkl_service-2.4.1-cp310-cp310-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.1-cp311-cp311-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.1-cp312-cp312-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.1-cp313-cp313-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.1-cp39-cp39-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.4.2-cp310-cp310-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.2-cp310-cp310-win_amd64.whl  mkl_service-2.4.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.4.2-cp311-cp311-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.2-cp311-cp311-win_amd64.whl  mkl_service-2.4.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.4.2-cp312-cp312-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.2-cp312-cp312-win_amd64.whl  mkl_service-2.4.2-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.4.2-cp313-cp313-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.2-cp313-cp313-win_amd64.whl  mkl_service-2.4.2-cp39-cp39-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  mkl_service-2.4.2-cp39-cp39-win_amd64.whl  mkl_service-2.5.0-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.0-cp310-cp310-win_amd64.whl  mkl_service-2.5.0-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.0-cp311-cp311-win_amd64.whl  mkl_service-2.5.0-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.0-cp312-cp312-win_amd64.whl  mkl_service-2.5.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.0-cp313-cp313-win_amd64.whl  mkl_service-2.5.2-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.2-cp310-cp310-win_amd64.whl  mkl_service-2.5.2-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.2-cp311-cp311-win_amd64.whl  mkl_service-2.5.2-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.2-cp312-cp312-win_amd64.whl  mkl_service-2.5.2-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.5.2-cp313-cp313-win_amd64.whl  mkl_service-2.6.0-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  mkl_service-2.6.0-cp310-cp310-win_amd64.whl  mkl_service-2.6.0-cp311-cp311-win_amd64.whl  (+7 more)
(+66 files in other folders)
